# Simple-Autoclicker

./: Button.h  CMakeLists.txt  Clicks.h  Colors.h  ConvertFunc.h  DelZeros.h  README.md  auto_clicker.cpp  main.cpp
Autoclicker/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
